--- a/README.org
+++ b/README.org
@@ -545,8 +545,8 @@ the declaration :
 
 * Author & Licence
 
-Copyright (C) 2019 Chimay
-Licensed under GPL v2
+  - Copyright (C) 2019 Chimay
+  - Licensed under GPL v2
 
 
 * Warning
