--- a/README.org
+++ b/README.org
@@ -418,7 +418,7 @@ You can click on it to navigate :
 
     + Left click
 
-      * Current location : alternate two last locations
+      * Current location : alternate two last locations in same circle
 
       * Other locations : go to that location
 
