--- a/README.org
+++ b/README.org
@@ -7,6 +7,9 @@
 - [[#introduction][Introduction]]
   - [[#history][History]]
   - [[#goal][Goal]]
+- [[#installation][Installation]]
+  - [[#melpa][MELPA]]
+  - [[#el-get][El-get]]
 - [[#step-by-step][Step by Step]]
   - [[#first-circles][First Circles]]
   - [[#moving-around][Moving around]]
@@ -79,6 +82,43 @@ it. Same process, to cycle, alternate or display the files. Note that
 the torus containing all these groups can be saved on a file and
 loaded later. Over time, your groups will grow and adapt to your
 style.
+
+
+* Installation
+
+
+** MELPA
+
+Torus is available on MELPA. If you have this line on your init file :
+
+#+begin_src emacs-lisp
+  (add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/"))
+#+end_src
+
+you should be able to install it from the packages menu
+(~list-packages~).
+
+
+** El-get
+
+If you use el-get, just create a recipe file ~torus.rcp~ :
+
+#+begin_src emacs-lisp
+  (:name torus
+	 :website "http://github.com/chimay/torus"
+	 :description "Torus : Circle of Circles of buffers"
+	 :type github
+	 :pkgname "chimay/torus")
+#+end_src
+
+and add it to a directory present in ~el-get-recipe-path~. Then, use
+~M-x el-get-install~ or add :
+
+#+begin_src emacs-lisp
+(el-get-bundle torus)
+#+end_src
+
+to your init file.
 
 
 * Step by Step
