--- a/README.org
+++ b/README.org
@@ -112,7 +112,7 @@ If you use el-get, just create a recipe file ~torus.rcp~ :
 #+end_src
 
 and add it to a directory present in ~el-get-recipe-path~. Then, use
-~M-x el-get-install~ or add :
+~M-x el-get-install <RET> torus~ or add :
 
 #+begin_src emacs-lisp
 (el-get-bundle torus)
