--- a/README.org
+++ b/README.org
@@ -591,6 +591,12 @@ the declaration :
 ** Structure
 
 #+begin_src artist
+                      root
+                    +---+---+
+                    |   | X |
+                    +-+-+---+
+                      |
+                      |
                     tree
   +---------+---------+-------+---------+
   | torus 1 | torus 2 | ...   | torus M |
@@ -601,11 +607,11 @@ the declaration :
            | "torus name" |
            +--------------+         +---------------+
            |  cercle 1    +---------+ "circle name" |
-           +--------------+         +---------------+
+           +--------------+         +---------------+   .
            |  cercle 2    |         |  location 1   |
-           +--------------+         +---------------+
-           |  ...         |         |  location 2   |
-           +--------------+         +---------------+
+           +--------------+         +---------------+       +------+----------+
+           |  ...         |         |  location 2   +-------+ file | position |
+           +--------------+         +---------------+       +------+----------+
            |  cercle N    |         |  ...          |
            +--------------+         +---------------+
                                     |  location P   |
