structure drawing, tree -> lace

--- a/README.org
+++ b/README.org
@@ -597,31 +597,48 @@ the declaration :
 
 ** Structure
 
+Data structure :
+
 #+begin_src artist
-                    tree
-                  +---+---+
-       +----------+   |   +--------+
-       |          +---+---+        |
-       |                           |
-       |                           |
-  +----+----+---------+-------+----+----+
-  | torus 1 | torus 2 | ...   | torus M |
-  +---------+----+----+-------+---------+
-                 |
-                 |
-           +-----+--------+
-           | "torus name" |
-           +--------------+     +---------------+
-           |    cercle 1  +-----+ "circle name" |
-           +--------------+     +---------------+
-           |    cercle 2  |     |  location 1   |
-           +--------------+     +---------------+     +--------+----------+
-           |    ...       |     |  location 2   +-----+ "file" | position |
-           +--------------+     +---------------+     +--------+----------+
-           |    cercle N  |     |  ...          |
-           +--------------+     +---------------+
-                                |  location P   |
-                                +---------------+
+                  lace
+                +---+---+      +---------------------+-------------+
+          +-----+   |   +------+ current-torus-index | lace-length |
+          |     +---+---+      +---------------------+-------------+
+          |
+          |
+     +----+----+---------+-------+---------+
+     | torus 1 | torus 2 | ...   | torus M |
+     +----+----+---------+-------+---------+
+          |
+          |
+          |
+      +---+---+---+       +----------------------+--------------+
+      | torus |   +-------+ current-circle-index | torus-length |
+      +---+---+---+       +----------------------+--------------+
+          |
+          |
+          |
+  +-------+------+----------+----------+-------+----------+
+  | "torus name" | circle 1 | circle 2 | ...   | circle N |
+  +--------------+----------+----+-----+-------+----------+
+                                 |
+             +-------------------+
+             |
+        +----+----+---+       +----------------------+---------------+
+        | circle  |   +-------+ current-circle-index | circle-length |
+        +----+----+---+       +----------------------+---------------+
+             |
+             |
+             |
+     +-------+-------+------------+------------+-------+------------+
+     | "circle name" | location 1 | location 2 | ...   | location P |
+     +---------------+------------+------+-----+-------+------------+
+                                         |
+                                         |
+                                         |
+                                +--------+----------+
+                                | "file" | position |
+                                +--------+----------+
 #+end_src
 
 
