tab bar -> status bar

--- a/README.org
+++ b/README.org
@@ -624,9 +624,9 @@ Data structure :
                                  |
              +-------------------+
              |
-        +----+----+---+       +----------------------+---------------+
-        | circle  |   +-------+ current-circle-index | circle-length |
-        +----+----+---+       +----------------------+---------------+
+        +----+----+---+       +------------------------+---------------+
+        | circle  |   +-------+ current-location-index | circle-length |
+        +----+----+---+       +------------------------+---------------+
              |
              |
              |
