data structure : fractal

--- a/README.org
+++ b/README.org
@@ -600,45 +600,55 @@ the declaration :
 Data structure :
 
 #+begin_src artist
-                  lace
-                +---+---+      +---------------------+-------------+
-          +-----+   |   +------+ current-torus-index | lace-length |
-          |     +---+---+      +---------------------+-------------+
-          |
-          |
-     +----+----+---------+-------+---------+
-     | torus 1 | torus 2 | ...   | torus M |
-     +----+----+---------+-------+---------+
-          |
-          |
-          |
-      +---+---+---+       +----------------------+--------------+
-      | torus |   +-------+ current-circle-index | torus-length |
-      +---+---+---+       +----------------------+--------------+
-          |
-          |
-          |
-  +-------+------+----------+----------+-------+----------+
-  | "torus name" | circle 1 | circle 2 | ...   | circle N |
-  +--------------+----------+----+-----+-------+----------+
-                                 |
-             +-------------------+
-             |
-        +----+----+---+       +------------------------+---------------+
-        | circle  |   +-------+ current-location-index | circle-length |
-        +----+----+---+       +------------------------+---------------+
-             |
-             |
-             |
-     +-------+-------+------------+------------+-------+------------+
-     | "circle name" | location 1 | location 2 | ...   | location P |
-     +---------------+------------+------+-----+-------+------------+
-                                         |
-                                         |
-                                         |
-                                +--------+----------+
-                                | "file" | position |
-                                +--------+----------+
+                           lace
+                         +---+---+      +---------------------+-------------+
+                   +-----+   |   +------+ current torus index | lace-length |
+                   |     +---+---+      +---------------------+-------------+
+                   |
+                   |
+              +----+----+---------+---------+-------+---------+
+              | torus 1 | torus 2 | torus 3 | ...   | torus M |
+              +---------+----+----+---------+-------+---------+
+                             |
+                   +---------+
+                   |
+               +---+---+ torus root
+          +----+   |   +----+
+          |    +---+---+    |
+          |                 |
+          |                 |
+  +-------+------+      +---+---+     +----------------------+--------------+
+  | "torus name" |      |   |   +-----+ current circle index | torus length |
+  +--------------+      +-+-+---+     +----------------------+--------------+
+                          |
+                +---------+
+                |
+          +-----+----+----------+----------+-------+----------+
+          | circle 1 | circle 2 | circle 3 | ...   | circle N |
+          +----------+----------+-----+----+-------+----------+
+                                      |
+                   +------------------+
+                   |
+               +---+---+ circle root
+          +----+   |   +---+
+          |    +---+---+   |
+          |                |
+          |                |
+  +-------+-------+    +---+---+   +------------------------+---------------+
+  | "circle name" |    |   |   +---+ current location index | circle length |
+  +---------------+    +-+-+---+   +------------------------+---------------+
+                         |
+           +-------------+
+           |
+     +-----+------+------------+------------+-------+------------+
+     | location 1 | location 2 | location 3 | ...   | location P |
+     +------------+------+-----+------------+-------+------------+
+                         |
+                         |
+                         |
+                +--------+----------+
+                | "file" | position |
+                +--------+----------+
 #+end_src
 
 
