convert version 1 vars, wheel part

--- a/README.org
+++ b/README.org
@@ -601,9 +601,9 @@ Data structure :
 
 #+begin_src artist
                            wheel
-                         +---+---+      +---------------------+-------------+
-                   +-----+   |   +------+ current torus index | lace-length |
-                   |     +---+---+      +---------------------+-------------+
+                         +---+---+      +---------------------+--------------+
+                   +-----+   |   +------+ current torus index | wheel length |
+                   |     +---+---+      +---------------------+--------------+
                    |
                    |
               +----+----+---------+---------+-------+---------+
